<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_title_alarms" >
        <RingtonePreference
            android:key="ringtone"
            android:ringtoneType="alarm"
            android:showDefault="true"
            android:showSilent="false"
            android:summary="@string/prefs_ringtone_summary"
            android:title="@string/prefs_ringtone_title" />

        <com.tomatodev.timerdroid.widgets.SeekBarPreference
            android:defaultValue="5"
            android:dialogMessage="@string/prefs_volume_dialog"
            android:key="alarm_volume"
            android:max="10"
            android:summary=""
            android:text=""
            android:title="@string/prefs_volume_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="insistent_alarm"
            android:summary="@string/prefs_insistent_alarm_summary"
            android:title="@string/prefs_insistent_alarm_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/prefs_title_screen" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screen_unlocked"
            android:summary="@string/prefs_screen_unlocked_summary"
            android:title="@string/prefs_screen_unlocked_title" />
    </PreferenceCategory>

</PreferenceScreen>