<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tomatodev.timerdroid.activities.HomeActivity">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="50"
        android:title="@string/main_preferences"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="withText"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_feedback"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="withText"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="withText"
        android:title="@string/menu_share"/>
</menu>
